@@ -36,8 +36,8 @@
             <artifactId>spring-aspects</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-instrument</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
