@@ -1,0 +1,1 @@
+java -cp ./target/chaos-monkey-demo-app-ext-jar-2.0.1-SNAPSHOT.jar -Dloader.path=../../chaos-monkey-spring-boot/target/chaos-monkey-spring-boot-2.0.1-SNAPSHOT.jar org.springframework.boot.loader.PropertiesLauncher --spring.profiles.active=chaos-monkey
