@@ -50,7 +50,6 @@
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
-        <commons-lang3.version>3.7</commons-lang3.version>
         <junit.version>4.12</junit.version>
         <assertj-core.version>2.6.0</assertj-core.version>
         <mockito-all.version>1.10.19</mockito-all.version>
@@ -64,6 +63,7 @@
         <module>chaos-monkey-spring-boot</module>
         <module>demo-apps/chaos-monkey-demo-app</module>
         <module>demo-apps/chaos-monkey-demo-app-naked</module>
+        <module>demo-apps/chaos-monkey-demo-app-ext-jar</module>
         <module>chaos-monkey-docs</module>
     </modules>
     <organization>
@@ -172,7 +172,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
     <profiles>
