@@ -9,6 +9,17 @@
 === Metrics
 - CM4SB now provides metrics about all recognized classes and methods. In addition, it provides metrics for all assaults and their use.
 
+=== AOP
+- Switch from compile-time weaving to load-time weaving to bring up the possibility to run the CM4SB as external loaded JAR.
+[source,txt,subs="verbatim,attributes"]
+.application.properties:
+----
+java -cp ./target/demo.jar
+    -Dloader.path=chaos-monkey-spring-boot-2.0.1.jar
+        org.springframework.boot.loader.PropertiesLauncher
+    --spring.profiles.active=chaos-monkey
+----
+
 === Bugs fixed
 - Repository Watcher was not initilized
 - Repository Watcher was not triggered by calling default Spring Data methods
